--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "delay": 1000
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "multer": "^2.0.2"
   }
 }
