--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "delay": 1000
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "mongoose": "^8.19.3",
     "multer": "^2.0.2"
   }
 }
