--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --inspect ./server.js",
-    "prod": "node ./server.js"
+    "prod": "node ./server.js",
+    "start": "node server.js"
   },
   "type": "module",
   "keywords": [],
